--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,6 +4,9 @@ server:
 application:
   name: Votação
   versao: 0.0.1
+  auth:
+    jwtSecret: Zr4u7x!A%D*G-KaPdSgVkYp2s5v8y/B?E(H+MbQeThWmZq4t6w9z$C&F)J@NcRfU
+    jwtExpiration: 1800000
 
 spring:
   datasource:
