--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>votacao</artifactId>
 	<version>1.0.0</version>
 	<name>votacao</name>
-	<description>Desafio tecnico DBC</description>
+	<description>API DE VOTACAO</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
